complete some backend apis and frontend signup & login form

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 JWTPRIVATE_KEY=hydrafoodslimited
+MONGODB_URL=mongodb+srv://admin:hydrafoods@hydrafoods.o7wsyz0.mongodb.net/?retryWrites=true&w=majority&appName=hydraFoods
