auth & product apis completed

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 JWTPRIVATE_KEY=hydrafoodslimited
 MONGODB_URL=mongodb+srv://admin:hydrafoods@hydrafoods.o7wsyz0.mongodb.net/?retryWrites=true&w=majority&appName=hydraFoods
+ADMIN_PASSWORD=admin1234
+ADMIN_EMAIL=admin@hydrafoods.com
