backend completed with email sending

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,8 @@
 JWTPRIVATE_KEY=hydrafoodslimited
 MONGODB_URL=mongodb+srv://admin:hydrafoods@hydrafoods.o7wsyz0.mongodb.net/?retryWrites=true&w=majority&appName=hydraFoods
 ADMIN_PASSWORD=admin1234
-ADMIN_EMAIL=admin@hydrafoods.com
+# ADMIN_EMAIL=admin@hydrafoods.com
+ADMIN_EMAIL=hydrafoods@mailinator.com
+EMAIL_USER=mohammadmunib1233@gmail.com
+EMAIL_PASS=kkbbdvzqezkppvsp
+
