--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.19.0",
+    "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
